# Yet-Another-CHIP8-Emulator

./: .gitignore  LICENSE  Makefile  README.md  build.sh  chip8.c  chip8.h  instruction_emulation.c  instruction_emulation.h  main.c  meson.build
include/: emulated.h  emulator.h  instruction.h
include/user_interface/: color_lerp.h  instruction_print.h
include/user_interface/sdl/: interface.h
src/: emulated.c  emulator.c  instruction.c  main.c  meson.build
src/assembler/: main.c
src/disassembler/: main.c
src/emulator/: emulated.c  emulator.c  instruction.c  main.c
src/emulator/emulated/: bitwise.c  draw.c  emulated.c  misc.c  should_skip.c  state.c
src/user_interface/: color_lerp.c  instruction_print.c
src/user_interface/sdl/: disassembling.c  interface.c  pause_menu.c
