emulator_src = files(
	'emulator/main.c',
	'instruction.c',
	'emulator/emulator.c',
	'emulator/emulated.c',
	'user_interface/sdl/interface.c',
	'user_interface/color_lerp.c',
	'user_interface/instruction_print.c',
)

assembler_src = files(
	'assembler/main.c',
	'instruction.c',
)

disassembler_src = files(
	'disassembler/main.c',
	'instruction.c',
	'user_interface/instruction_print.c',
)